--- a/_posts/2015-04-18-dummy2.md
+++ b/_posts/2015-04-18-dummy2.md
@@ -4,6 +4,10 @@ title:  "My First Post"
 date:   2024-08-01
 author: Arielle
 categories: [Story Garage]
+tags:	jekyll welcome
+cover:  "/assets/instacode.png"
+pagination: 
+  enabled: true
 ---
 
 Test
