--- a/_posts/2015-04-18-dummy2.md
+++ b/_posts/2015-04-18-dummy2.md
@@ -3,7 +3,7 @@ layout: post
 title:  "My First Post"
 date:   2024-09-28
 author: Arielle
-categories: [Story Garage] #Story Garage
+categories: [Code & Road] #Story Garage
 tags:	jekyll welcome
 #cover:  "/assets/instacode.png"
 ---
