--- a/_posts/2015-04-18-dummy2.md
+++ b/_posts/2015-04-18-dummy2.md
@@ -4,7 +4,7 @@ title:  "My First Post"
 date:   2024-09-28
 author: Arielle
 categories: [Code & Road] #Story Garage
-tags:	jekyll welcome
+tags:	docker autonomous_driving
 #cover:  "/assets/instacode.png"
 ---
 
