--- a/_posts/2024-09-28-docker.md
+++ b/_posts/2024-09-28-docker.md
@@ -121,3 +121,7 @@ Docker를 사용하며 자주 쓰는 명령어는 10개 정도 되는 것 같다
 지금까지의 글로 1주차 Docker스터디를 정리해보았다. Docker가 익숙한 개발자라면 붕어빵만 외치는 지금 나의 글이 꽤 유치하다고 할 수도 있다. 아무렴 나는 Docker가 고래 그 이상이 된지 1주차 된 개발자다. 사실 이해가 된 부분도 있는가 하면 완벽히 이해가 되지 않은 부분도 있다.  다음 포스팅에서는 Azure에서 우분투 가상 머신을 구축하는 실습 내용을 이어서 정리해본다면 지금보다는 더 Docker를 이해할 수 있지 않을까 싶다! 
 </em>
 </p>
+
+---
+### Reference
+- [Docker_cheatsheet](https://docs.docker.com/get-started/docker_cheatsheet.pdf)
