--- a/_posts/2024-10-05-docker.md
+++ b/_posts/2024-10-05-docker.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "🐳 Docker study 1st"
-date:   2024-09-28
+title:  "🐳 Docker study 2nd"
+date:   2024-10-05
 author: Arielle
 categories: [Code & Road] #Story Garage
 tags:   Docker Autonomous_Driving NVIDIA
