add 4th docker posting images

--- a/_posts/2024-10-17-docker.md
+++ b/_posts/2024-10-17-docker.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "🐳 Docker study 3rd"
-date:   2024-10-11
+title:  "🐳 Docker study 4th"
+date:   2024-10-17
 author: Arielle
 categories: [Code & Road] #Story Garage
-tags:   Docker Autonomous_Driving NVIDIA Azure Cloud Python
+tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 #cover:  "/assets/instacode.png"
 ---
 
