--- a/_posts/2024-10-17-docker.md
+++ b/_posts/2024-10-17-docker.md
@@ -27,7 +27,14 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 </html>
 
 <p>
-<em>앞선 <Docker study 3rd>포스팅에서는 Kaggle Image를 이용해 컨테이너 즉, 가상환경에서 Python을 사용할 수 있는 환경을 구축했다. 이번 4주차에는 대표적인 데이터 분석 환경인 R을 Kaggle Image를 이용해 빌드해보는 실습을 진행했다. ‘Dockerfile’에 대해서 조금 더 깊게 다뤘는데 분명 지난 3주차에 다룬 내용임에도 불구하고 응용 쪽으로 들어오니 뭔가 다시 머리가 새하얘지는 기분이었다. (전생에 금붕어였나보다.🤦‍♀️) 아마 새로운 개념의 연속이다 보니 조금 이해가 느린 것 같은 데, 문제를 해결해야 한다는 의지는 들어 다행인 듯 싶다. 혹시 이번 포스팅에 들어가기 앞서 ‘Dockerfile’이 무엇인지 딱 한번에 한줄로 정리 되지 않았다면 이전 포스팅 중 📂 Dockerfile? 이 부분을 후딱 읽고 오는 걸 추천한다! 🏁
+<em>
+앞선 <Docker study 3rd>포스팅에서는 Kaggle Image를 이용해 컨테이너 즉, 가상환경에서 Python을 사용할 수 있는 환경을 구축했다. 이번 4주차에는 대표적인 데이터 분석 환경인 R을 Kaggle Image를 이용해 빌드해보는 실습을 진행했다. ‘Dockerfile’에 대해서 조금 더 깊게 다뤘는데 분명 지난 3주차에 다룬 내용임에도 불구하고 응용 쪽으로 들어오니 뭔가 다시 머리가 새하얘지는 기분이었다. (전생에 금붕어였나보다.🤦‍♀️) 아마 새로운 개념의 연속이다 보니 조금 이해가 느린 것 같은 데, 문제를 해결해야 한다는 의지는 들어 다행인 듯 싶다. 
+</em>
+</p>
+
+<p>
+<em>
+혹시 이번 포스팅에 들어가기 앞서 ‘Dockerfile’이 무엇인지 딱 한번에 한줄로 정리 되지 않았다면 이전 포스팅 중 📂 Dockerfile? 이 부분을 후딱 읽고 오는 걸 추천한다! 🏁
 </em>
 </p>
 ---
