--- a/_posts/2024-10-17-docker.md
+++ b/_posts/2024-10-17-docker.md
@@ -48,20 +48,26 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 <h4>1.2 Running an R container in the RStudio Server IDE environment</h4>
 지금까지 도커를 사용함에 있어 먼저 필요한 이미지를 다운받고 이를 해당 컨테이너 즉 가상환경의 터미널에서 실행시키는 방법으로 진행했다. 이번에는 IDE 환경(Web)에서 컨테이너를 실행시켜보는 방법을 RStudio Server를 이용해 시도해보았다. 아래 사진은 실제로 R 컨테이너를 통해 IDE에 접근한 결과인데, 보면 웹에서 성공적으로 실행되고 있음을 확인할 수 있다.
 
-이를 위한 방법은 이 명령어 한 줄 이면 가능하다. 조금 길긴 하지만 하나하나 읽어보면 또 완전히 못 할 것도 아닌 듯 싶다.
-
-✅ <code>docker run -d -p 8787:8787 --gpus all -v "/home/Arielle/rproject:/home/rstudio/rproject" --name rstudio-container gcr.io/kaggle-gpu-images/rstats:v59 /bin/bash -c "rstudio-server start && tail -f /dev/null"</code>
-
 <img src="{{ '/assets/p.14/p14.2.png' | relative_url }}" alt="Descriptive Alt Text" />
 
-<code>docker run -d</code>는 새로운 컨테이너를 지정된 이미지를 사용해 실행시키는 명령어이다. <code>-d</code> 옵션을 사용하면 "Detached mode"로 컨테이너가 백그라운드에서 실행되는데, 덕분에 터미널이 컨테이너에 묶이지 않고 다른 작업을 계속할 수 있다! 만약 해당 옵션을 사용하지 않으면 컨테이너가 실행되는 동안 터미널이 그 작업만! 붙잡혀 있어 다른 명령어를 입력할 수가 없는 상황이 되기 때문에 주의가 필요하다!
+이를 위한 방법은 이 명령어 한 줄 이면 가능하다. 조금 길긴 하지만 하나하나 읽어보면 또 완전히 못 할 것도 아닌 듯 싶다.
 
-<code>-p 8787:8787</code> 의 경우 포트 포워딩을 설정하는 옵션으로 컨테이너의 8787 포트(즉, RStudio Server가 실행되는 기본 포트)를 호스트 시스템의 동일한 8787 포트와 연결하는 역할을 한다. 이 설정 덕분에 웹 브라우저에서 ‘http://localhost:8787’을 입력하면 RStudio Server에 접근할 수 있게 되는 것이다. 그런데 이렇게 간단하게 문장으로 설명하기는 했지만, 사실 나는 포트에 대한 개념이 딱 정리되어 있지는 않은 상태에서 강의를 듣다보니 내가 제대로 이해한 게 맞는지 혼란스러웠다.(아마 내가 아는 포트는 1004, 22번 포트 정도??🤨)그래서 다시는 포트에 대해서 헷갈리지 않겠다는 다짐으로 이에 대해서 잠깐 정리하고 넘어가도록 하고자 한다!
+✅ <strong>Rstudio Web Browser connect code</strong>  <code>docker run -d -p 8787:8787 --gpus all -v "/home/Arielle/rproject:/home/rstudio/rproject" --name rstudio-container gcr.io/kaggle-gpu-images/rstats:v59 /bin/bash -c "rstudio-server start && tail -f /dev/null"</code>
+
+<code>docker run -d</code>는 새로운 컨테이너를 지정된 이미지를 사용해 실행시키는 명령어이다. <code>-d</code> 옵션을 사용하면 "Detached mode"로 컨테이너가 백그라운드에서 실행되는데, 덕분에 터미널이 컨테이너에 묶이지 않고 다른 작업을 계속할 수 있다! 만약 해당 옵션을 사용하지 않으면 컨테이너가 실행되는 동안 터미널이 그 작업에만! 붙잡혀 있어 다른 명령어를 입력할 수가 없는 상황이 되기 때문에 주의가 필요하다!
+
+<code>-p 8787:8787</code> 의 경우 포트 포워딩을 설정하는 옵션으로 컨테이너의 8787 포트(즉, RStudio Server가 실행되는 기본 포트)를 호스트 시스템의 동일한 8787 포트와 연결하는 역할을 한다. 이 설정 덕분에 웹 브라우저에서 ‘http://localhost:8787’을 입력하면 RStudio Server에 접근할 수 있게 되는 것이다. 
+
+그런데 이렇게 간단하게 문장으로 설명하기는 했지만, 사실 나는 포트에 대한 개념이 딱 정리되어 있지는 않은 상태에서 강의를 듣다보니 내가 제대로 이해한 게 맞는지 혼란스러웠다.(아마 내가 아는 포트는 1004, 22번 포트 정도??🤨)그래서 다시는 포트에 대해서 헷갈리지 않겠다는 다짐으로 이에 대해서 잠깐 정리하고 넘어가도록 하고자 한다!
 
 ---
 <h4>🚪 Port?</h4>
 
-일단 나는 Port가 정확히 모르지만 알게모르게 여기저기 사용하고 있긴 했다. 앞서 [RDP 방식으로 MAC 가상환경을 구축](https://arielle0222.github.io/code%20&%20road/2024/10/05/docker.html)할 때가 대표적이다. 아래 사진은 내가 이해한 Port의 개념을 정리한 그림이다. 클라이언트와 서버의 측면에서 이해하고자 한다면 좌측처럼 서버에게 사용하려고 하는 서비스 각각에게 부여된 특정 포트번호를 통해 클라이언트와 연결할 수 있다. 대표적으로  위에서 언급한 RDP 방식은 3389 포트를, SSH는 22번 포트를, 그리고 VNC는 5900번 포트를 이용해 연결한다. 
+일단 나는 Port가 정확히 모르지만 알게모르게 여기저기 사용하고 있긴 했다. 앞서 [RDP 방식으로 MAC 가상환경을 구축](https://arielle0222.github.io/code%20&%20road/2024/10/05/docker.html)할 때가 대표적이다. 아래 사진은 내가 이해한 Port의 개념을 정리한 그림이다. 
+
+<img src="{{ '/assets/p.14/p14.1.1.png' | relative_url }}" alt="Descriptive Alt Text" />
+
+클라이언트와 서버의 측면에서 이해하고자 한다면 좌측처럼 서버에게 사용하려고 하는 서비스 각각에게 부여된 특정 포트번호를 통해 클라이언트와 연결할 수 있다. 대표적으로  위에서 언급한 RDP 방식은 3389 포트를, SSH는 22번 포트를, 그리고 VNC는 5900번 포트를 이용해 연결한다. 
 
 그렇다면 도커 컨테이너 관점에서 이해해보면 어떨까? 이 관점에서는 기존의 클라이어트가 로컬 호스트(Local Host)로 서버는 컨테이너(Container) 개념으로 바꾸어 생각해볼 수 있다. 이 때 컨테이너는 마이크로 서비스(하나의 특정 프로그램)을 사용하기 위한 독립된 컴퓨터로 이해하면 된다. 그림에도 나와 있듯이 컨테이너는 ‘User Space’라는 하나의 Operating system 위에 실행하고자 하는 서비스(Image)로 구성되어 있다는 점도 꼭 기억하도록 하자!
 
@@ -69,7 +75,7 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 
 하지만 그럼에도 불구하고 로컬 호스트와 컨테이너의 포트 번호를 동일하게 설정하는 이유는 편리성과 더불어 격리성(Isolation) 때문이다. 만약 컨테이너가 여러 개 있을 경우 포트 번호가 같다면 각각의 포트를 찾는 데 쉬워지게 된다. 이 개념의 연장선으로 Isolation에 대해 설명할 수 있는데, 컨테이너는 기본적으로 외부와 완전히 분리된 상태에서 동작한다. 이때 포트 페어를 지정해 로컬과 컨테이너 간 통신을 설정하게 되면 격리된 컨테이너가 외부에서 접근 가능한 상태로 되는 Docker의 진짜 힘을 발휘하게 되는 것이다!
 
-<img src="{{ '/assets/p.14/p14.1.1.png' | relative_url }}" alt="Descriptive Alt Text" />
+
 
 ---
 
@@ -83,7 +89,7 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 
 ---
 
-<h2>2. How wok Python package in R?</h2>
+<h2>2. How to work Python package in R?</h2>
 컨테이너를 통해 로컬 호스트에 잘 접속 했다면 아래처럼 R프로그램을 만나게 되는데, 사실 나는 R 프로그램을 다뤄 본 적이 없어서 저게 무슨 문법인가 했다. 일단 `reticulate::py_config()`는 R에서 Python 환경을 설정하고 그 환경의 정보를 출력하는 함수이다. 특이하게 R에서는`reticulate` 패키지를 통해 Python을 연동할 수 있는데 실행시켜 보니 “*Would you like to create a default Python environment for the reticulate package? (Yes/no/cancel)”* 문구가 콘솔에 뜨는 걸 확인할 수 있었다. 이 문구는 R과 연동할 Python 환경이 아직 없는 상태로 `reticulate` 패키지가 자동으로 새로운 Python 환경 설치를 물어보는 문구였다. 그래서 일단 YES! 로 Python을 설치해 주었다.
 
 <img src="{{ '/assets/p.14/p14.5.png' | relative_url }}" alt="Descriptive Alt Text" />
@@ -123,7 +129,7 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 앞서 Docker study 3rd에서 Dockerfile에 대해서 알아봤었다. 그때는 붕어빵을 예로 들면서 Dockerfile을 붕어빵 틀을 만드는 레시피 정도로 설명 했었는데, 이번에는 조금 더 소프트웨어 관점에서 생각해보고자 한다. 
 
 ---
-📂 Dockerfile? ([’👉🏻Docker study 3rd'](https://arielle0222.github.io/code%20&%20road/2024/10/11/docker.html))
+📂 <strong>Dockerfile?</strong> ([’👉🏻Docker study 3rd'](https://arielle0222.github.io/code%20&%20road/2024/10/11/docker.html))
 
 #**붕어빵 틀**을 만드는 레시피
 
