--- a/_posts/2024-10-05-docker.md
+++ b/_posts/2024-10-05-docker.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "🐳 Docker study 2nd"
+series: "docker"  # Docker 시리즈에 대한 시리즈 지정
+subtitle: "Building a Cloud-Based Docker Environment on Azure"
 date:   2024-10-05
 author: Arielle
 categories: [Code & Road] #Story Garage
