--- a/_posts/2024-10-11-docker.md
+++ b/_posts/2024-10-11-docker.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "🐳 Docker study 3rd"
+series: "docker"  # Docker 시리즈에 대한 시리즈 지정
+subtitle: "Optimizing Kaggle Python Docker for Data Analysis"
 date:   2024-10-11
 author: Arielle
 categories: [Code & Road] #Story Garage
