--- a/_posts/2024-10-17-docker.md
+++ b/_posts/2024-10-17-docker.md
@@ -1,12 +1,15 @@
 ---
 layout: post
 title:  "🐳 Docker study 4th"
+series: "docker"  # Docker 시리즈에 대한 시리즈 지정
+subtitle: "Running RStudio on Docker: Leveraging GPU for Data Analysis"
 date:   2024-10-17
 author: Arielle
 categories: [Code & Road] #Story Garage
 tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 #cover:  "/assets/instacode.png"
 ---
+
 
 
 ---
@@ -41,12 +44,16 @@ tags:   Docker Autonomous_Driving NVIDIA Azure Cloud
 <h2>1. Setting up a R analysis environment</h2>
 <h4>1.1 Installing a Kaggle GPU image for R</h4>
 
-[’Kaggle gpu R image'](https://github.com/Kaggle/docker-rstats) 라고 검색하면 컨테이너에서 R을 사용할 수 있기 위한 이미지를 다운 받을 수 있는 링크가 나온다. 앞서 Kaggle의 Python 환경을 구축하기 위한 이미지 빌드와 유사한 방법으로 진행되기 때문에 이 부분은 쉽게 진행이 가능했다. 설치 시점(2024.10.14) 기준 R의 최신 버전은 v59이다. 나는 <code>docker pull gcr.io/kaggle-gpu-images/rstats:v59</code> 로 가상머신에 설치했다. 
+[’Kaggle gpu R image'](https://github.com/Kaggle/docker-rstats) 라고 검색하면 컨테이너에서 R을 사용할 수 있기 위한 이미지를 다운 받을 수 있는 링크가 나온다. 앞서 Kaggle의 Python 환경을 구축하기 위한 이미지 빌드와 유사한 방법으로 진행되기 때문에 이 부분은 쉽게 진행이 가능했다. 설치 시점(2024.10.14) 기준 R의 최신 버전은 v59이다. 
+
+나는 <code>docker pull gcr.io/kaggle-gpu-images/rstats:v59</code> 로 가상머신에 설치했다. 
 
 <img src="{{ '/assets/p.14/p14.1.png' | relative_url }}" alt="Descriptive Alt Text" />
 
 <h4>1.2 Running an R container in the RStudio Server IDE environment</h4>
-지금까지 도커를 사용함에 있어 먼저 필요한 이미지를 다운받고 이를 해당 컨테이너 즉 가상환경의 터미널에서 실행시키는 방법으로 진행했다. 이번에는 IDE 환경(Web)에서 컨테이너를 실행시켜보는 방법을 RStudio Server를 이용해 시도해보았다. 아래 사진은 실제로 R 컨테이너를 통해 IDE에 접근한 결과인데, 보면 웹에서 성공적으로 실행되고 있음을 확인할 수 있다.
+지금까지 도커를 사용함에 있어 먼저 필요한 이미지를 다운받고 이를 해당 컨테이너, 즉 가상환경의 터미널에서 실행시키는 방법으로 진행했다. 이번에는 IDE 환경(Web)에서 컨테이너를 실행시켜보는 방법을 RStudio Server를 이용해 시도해보았다. 
+
+아래 사진은 실제로 R 컨테이너를 통해 IDE에 접근한 결과인데, 보면 웹에서 성공적으로 실행되고 있음을 확인할 수 있다.
 
 <img src="{{ '/assets/p.14/p14.2.png' | relative_url }}" alt="Descriptive Alt Text" />
 
@@ -339,6 +346,7 @@ CMD ["rstudio-server start && tail -f /dev/null"]
 지금이야 이미지를 만들고 로컬에서 실행하는 데 큰 문제가 없었다. 하지만 컨테이너에서 사용하는 이미지들이 많아진다면 로컬이라는 한정된 공간에서 효율성이 떨어지게 된다. 그래서 보통은 Docker Registry라는 곳에 이미지를 저장(push)하고 필요할 때마다 당겨와(pull) 로컬 혹은 가상머신에서 사용하는 게 일반적이다. 다음 포스팅 부터는 이 이야기를 중심으로 진행되니 기대해 주길 바란다! 😎
 
 <img src="{{ '/assets/p.14/p14.14.png' | relative_url }}" alt="Descriptive Alt Text" />
+
 
 ---
 
