--- a/_posts/2024-09-28-docker.md
+++ b/_posts/2024-09-28-docker.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  "🐳 Docker study 1st"
+series: "docker"  # Docker 시리즈에 대한 시리즈 지정
+subtitle: "Why Docker Matters for Autonomous Driving?"
 date:   2024-09-28
 author: Arielle
 categories: [Code & Road] #Story Garage
