rename image folder

--- a/_posts/2024-10-25-docker.md
+++ b/_posts/2024-10-25-docker.md
@@ -7,7 +7,7 @@ date:   2024-10-25
 author: Arielle
 categories: [Code & Road] #Story Garage
 tags:   Docker BigData ADLS2 CloudStorage Azure DataLake
-cover:  "/assets/instacode.png"
+#cover:  "/assets/instacode.png"
 ---
 
 
@@ -31,24 +31,36 @@ cover:  "/assets/instacode.png"
 
 <p>
 <em>
-앞선 <Docker study 3rd>포스팅에서는 Kaggle Image를 이용해 컨테이너 즉, 가상환경에서 Python을 사용할 수 있는 환경을 구축했다. 이번 4주차에는 대표적인 데이터 분석 환경인 R을 Kaggle Image를 이용해 빌드해보는 실습을 진행했다. ‘Dockerfile’에 대해서 조금 더 깊게 다뤘는데 분명 지난 3주차에 다룬 내용임에도 불구하고 응용 쪽으로 들어오니 뭔가 다시 머리가 새하얘지는 기분이었다. (전생에 금붕어였나보다.🤦‍♀️) 아마 새로운 개념의 연속이다 보니 조금 이해가 느린 것 같은 데, 문제를 해결해야 한다는 의지는 들어 다행인 듯 싶다. 
+지난주까지 우리는 로컬과 가상머신의 연결을 통해 Dockerfile, Image, Container를 관리하는 방법을 배웠다. 독특하게 Microsoft Azure은 가상연결 방식 외에도 ADLS2(Azure Data Lake Storage Gen2)라는 일명 데이터 저장소 플랫폼을 운영하고 있다.
 </em>
 </p>
 
 <p>
 <em>
-혹시 이번 포스팅에 들어가기 앞서 ‘Dockerfile’이 무엇인지 딱 한번에 한줄로 정리 되지 않았다면 이전 포스팅 중 📂 Dockerfile? 이 부분을 후딱 읽고 오는 걸 추천한다! 🏁
+사실 ADLS2? 공부하기 전까지 들어본 적도 없는 친구였다. 혹시 오늘의 포스팅을 들어가기 앞서 <em>“ADLS2? 꼭 알아야 되나?</em>😬” 라고 떠올릴 수도 있다. ‘Data Lake’라는 개념이 등장하면서 빅데이터 분석, 머신러닝, IoT, 엔터프라이즈 데이터 관리 등 실제 이 ADLS를 채택하고 있는 기업들이 많아진 것을 생각해봤을 때, Docker같은 가상화 기술을 공부하는 입장에서 이는 분명 시너지가 될 수 있다고 생각한다!
 </em>
 </p>
+
+<p>
+<em>
+오늘은 이 ADLS2가 도대체 어떤 역할을 하고, 왜 우리가 알아두면 좋을지, 그리고 Docker와의 연계가 어떻게 이루어지는지에 대해 이야기 해보도록 한다!🚀
+</em>
+</p>
+
 ---
-<h2>1. Setting up a R analysis environment</h2>
-<h4>1.1 Installing a Kaggle GPU image for R</h4>
+<h2>1. Connecting Azure Storage Account with Blobfuse</h2>
 
-[’Kaggle gpu R image'](https://github.com/Kaggle/docker-rstats) 라고 검색하면 컨테이너에서 R을 사용할 수 있기 위한 이미지를 다운 받을 수 있는 링크가 나온다. 앞서 Kaggle의 Python 환경을 구축하기 위한 이미지 빌드와 유사한 방법으로 진행되기 때문에 이 부분은 쉽게 진행이 가능했다. 설치 시점(2024.10.14) 기준 R의 최신 버전은 v59이다. 
+**Azure Storage Account**는 Microsoft Azure에서 제공하는 **클라우드 기반 스토리지 서비스**로 데이터를 안전하고 확장 가능하게 저장할 수 있는 공간을 제공하고 있다. 이 저장소는 다양한 종류의 데이터를 처리할 수 있어 기업이나 개발자들이 필요에 따라 원하는 데이터를 손쉽게 저장하고 관리할 수 있도록 돕는 플랫폼 정도로 이해하면 된다. 
 
-나는 <code>docker pull gcr.io/kaggle-gpu-images/rstats:v59</code> 로 가상머신에 설치했다. 
+나는 그 중 특히 ‘Blob Storage’를 이용해 데이터를 저장해 두었는데 생각보다 되게 좋았던 점은 이미지, 스크립트파일(python, c, c++ etc.), 텍스트파일, 엑셀파일 등 진짜 어떤 데이터든 모두 올려두고 내가 가상환경에서 작업을 하던, 로컬에서 작업을 하던 원하는 데이터를 가져올 수 있다는 것이다. *(앞으로는 가져온다는 개념을 마운트(mount)라고 정리할게요!)* 그리고 참고로 아직은 무엇인지 잘 감이 안잡히는 이 ‘Blob Storage’에 ‘Data Lake’ 기능을 추가해 만들어진 것이 바로 이번 포스팅의 키워드, ADLS인 것이다!  
 
-<img src="{{ '/assets/p.14/p14.1.png' | relative_url }}" alt="Descriptive Alt Text" />
+그럼 지금부터 단계별로 어떻게 Storage Account를 생성하고 가상환경과 연동할 수 있는지 이어서 이야기해보록 하겠다!
+
+<h4>1.1  Creating a Storage Account</h4>
+
+가장 먼저 해야 할 일은 Azure에서 Storage Account를 만드는 것이다. 아래 사진을 보면 500TB까지 데이터를 저장할 수 있다고 하니 웬만한 빅데이터 프로젝트를 사용하는데는 큰 무리가 없을 것 같다. 
+
+<img src="{{ '/assets/p.23/p14.1.png' | relative_url }}" alt="Descriptive Alt Text" />
 
 <h4>1.2 Running an R container in the RStudio Server IDE environment</h4>
 지금까지 도커를 사용함에 있어 먼저 필요한 이미지를 다운받고 이를 해당 컨테이너, 즉 가상환경의 터미널에서 실행시키는 방법으로 진행했다. 이번에는 IDE 환경(Web)에서 컨테이너를 실행시켜보는 방법을 RStudio Server를 이용해 시도해보았다. 
