--- a/_posts/2024-10-25-docker.md
+++ b/_posts/2024-10-25-docker.md
@@ -213,7 +213,7 @@ Storage Account 이름, 키, 컨테이너 이름을 설정해 주면 된다. 마
 
  아래는 ‘mounteddrive2’라는 새로운 Container를 만들어 SAS 방식을 실습해 본 사진이다. Settomgs > Shared access tockens 카테고리로 들어가면 토큰의 기간을 지정해 줄 수 있다. 만약 회사 외부 파트너 혹은 임시 테스트 프로그램 상 일부 데이터에 접근해야 할 필요가 있을 때, 그 때 상황에 맞게 일시적으로 권한을 부여해 주는 방식으로 사용된다. (해당 페이지 하단의 ‘Blob SAS URL’로 연결 진행!)
 
-<img src="{{ '/assets/p.23/p23.17.png' | relative_url }}" alt="Descriptive Alt Text" />
+<img src="{{ '/assets/p.23/p23.17.jpg' | relative_url }}" alt="Descriptive Alt Text" />
 
 Azure Storage Explorer에서는 ‘ADLS Gen2 container or directory’ 옵션을 선택해주면 된다. 
 
