--- a/_posts/docker_study/2024-09-28-docker.md
+++ b/_posts/docker_study/2024-09-28-docker.md
@@ -7,7 +7,7 @@ date:   2024-09-28
 author: Arielle
 categories: [Code & Road] #Story Garage
 tags:   Docker Autonomous_Driving NVIDIA
-#cover:  "/assets/instacode.png"
+#cover:  "/assets/header2.gif"
 ---
 
 <p>
